--- a/integration/systemd/ecs-agent.service
+++ b/integration/systemd/ecs-agent.service
@@ -27,8 +27,12 @@ Requires=docker.service
 After=docker.service
 
 [Service]
+Environment=AGENT_TAG=v1.15.0
 Type=simple
-ExecStartPre=/usr/bin/docker pull amazon/amazon-ecs-agent:latest
+# Load an updated agent, if it exists:
+ExecStartPre=-/bin/sh -c 'test -f /var/cache/ecs/desired-image && docker load $(cat /var/cache/ecs/desired-image) && rm -f $(cat /var/cache/ecs/desired-image) /var/cache/ecs/desired-image'
+# If we don't have an agent, load from disk, if possible, or Docker Hub:
+ExecStartPre=/bin/sh -c "docker inspect amazon/amazon-ecs-agent || docker load < /var/cache/ecs/ecs-agent.tar || docker pull amazon/amazon-ecs-agent:${AGENT_TAG}"
 ExecStartPre=/sbin/iptables -t nat -A PREROUTING -d 169.254.170.2/32 \
  -p tcp -m tcp --dport 80 -j DNAT --to-destination 127.0.0.1:51679
 ExecStartPre=/sbin/iptables -t nat -A OUTPUT -d 169.254.170.2/32 \
@@ -48,8 +52,9 @@ ExecStart=/usr/bin/docker run --name ecs-agent \
   --env ECS_AVAILABLE_LOGGING_DRIVERS='["json-file","syslog","awslogs"]' \
   --env ECS_ENABLE_TASK_IAM_ROLE=true \
   --env ECS_ENABLE_TASK_IAM_ROLE_NETWORK_HOST=true \
+  --env ECS_UPDATES_ENABLED=true \
   --env-file=/etc/ecs/ecs.config \
-  amazon/amazon-ecs-agent:latest
+  amazon/amazon-ecs-agent:${AGENT_TAG}
 ExecStop=/usr/bin/docker stop ecs-agent
 ExecStopPost=-/sbin/iptables -t nat -D PREROUTING -d 169.254.170.2/32 \
  -p tcp -m tcp --dport 80 -j DNAT --to-destination 127.0.0.1:51679
