--- a/integration/systemd/amazon-ecs-agent.service
+++ b/integration/systemd/amazon-ecs-agent.service
@@ -16,7 +16,7 @@
 # attempts to duplicate the functionality of the `ecs-init` Golang package. The
 # notable differences currently are:
 #
-# 1. The unit file downloads latest ECS Agent from
+# 1. The unit file downloads the latest ECS Agent from
 # S3 at startup, if the files (ECS Agent tar / MD5 hash) are missing.
 # 2. The unit file does not currently handle the Agent's self-upgrade
 # functionality.
@@ -60,48 +60,52 @@ StartLimitBurst=10
 Environment=ECS_AGENT_VERSION=latest
 Environment=DOWNLOAD_LOCATION=/var/cache/ecs
 
-ExecStartPre=-/usr/bin/echo "Amazon ECS Agent systemd unit file version 1.0.0"
+ExecStartPre=-/bin/echo "Amazon ECS Agent systemd unit file version 1.0.0"
 
 # Create the directories needed for the ECS Agent.
 ExecStartPre=/bin/mkdir -p /var/lib/ecs/dhclient /var/ecs-data /etc/ecs \
     /var/cache/ecs
 
 # Test if /etc/ecs/ecs.config is there, if not create it.
-ExecStartPre=/bin/sh -c 'touch -a /etc/ecs/ecs.config'
-
-# Set the varable REGION for the ECS Agnet download from S3.
-ExecStartPre=/bin/sh -c "REGION=$(curl -s 169.254.169.254/latest/meta-data/placement/availability-zone | sed 's/.$//')"
+ExecStartPre=/bin/sh -c 'test -f /etc/ecs/ecs.config || touch /etc/ecs/ecs.config'
 
 # Download ECS Agent from S3.
-ExecStartPre=/usr/bin/echo "Downloading the ECS Agent from S3, if missing"
+ExecStartPre=/bin/echo "Downloading the ECS Agent from S3, if missing from instance"
 ExecStartPre=/bin/sh -c '\
-case $$REGION in \
+REGION=$(curl -s 169.254.169.254/latest/meta-data/placement/availability-zone | sed "s/.$//"); \
+case $REGION in \
     cn-north-1) \
-        wget https://s3.${REGION}.amazonaws.com.cn/amazon-ecs-agent/ecs-agent-${ECS_AGENT_VERSION}.{tar,tar.md5} --directory-prefix=${DOWNLOAD_LOCATION} --no-clobber --quiet ;; \
+        wget https://s3.$${REGION}.amazonaws.com.cn/amazon-ecs-agent/ecs-agent-${ECS_AGENT_VERSION}.tar \
+            https://s3.$${REGION}.amazonaws.com.cn/amazon-ecs-agent/ecs-agent-${ECS_AGENT_VERSION}.tar.md5 --directory-prefix=${DOWNLOAD_LOCATION} --no-clobber --quiet \
+        ;; \
     us-gov-west-1) \
-        wget https://s3-fips-${REGION}.amazonaws.com/amazon-ecs-agent/ecs-agent-${ECS_AGENT_VERSION}.{tar,tar.md5} --directory-prefix=${DOWNLOAD_LOCATION} --no-clobber --quiet ;; \
+        wget https://s3-fips-$${REGION}.amazonaws.com/amazon-ecs-agent/ecs-agent-${ECS_AGENT_VERSION}.tar \
+            https://s3-fips-$${REGION}.amazonaws.com/amazon-ecs-agent/ecs-agent-${ECS_AGENT_VERSION}.tar.md5 --directory-prefix=${DOWNLOAD_LOCATION} --no-clobber --quiet \
+        ;; \
     *) \
-        wget https://s3.amazonaws.com/amazon-ecs-agent/ecs-agent-${ECS_AGENT_VERSION}.{tar,tar.md5} --directory-prefix=${DOWNLOAD_LOCATION} --no-clobber --quiet ;; \
+        wget https://s3.amazonaws.com/amazon-ecs-agent/ecs-agent-${ECS_AGENT_VERSION}.tar \
+            https://s3.amazonaws.com/amazon-ecs-agent/ecs-agent-${ECS_AGENT_VERSION}.tar.md5 --directory-prefix=${DOWNLOAD_LOCATION} --no-clobber --quiet \
+        ;; \
 esac'
 
 # # Check the MD5 Sum of the downloaded ECS Agent.
-ExecStartPre=/usr/bin/echo "Checking the hash of the ECS Agent"
-ExecStartPre=/bin/sh -c "if [[ $(md5sum ${DOWNLOAD_LOCATION}/ecs-agent-${ECS_AGENT_VERSION}.tar | cut -d ' ' -f 1) != $(cat ${DOWNLOAD_LOCATION}/ecs-agent-${ECS_AGENT_VERSION}.tar.md5) ]]; then exit 1; fi"
+ExecStartPre=/bin/echo "Checking the hash of the ECS Agent"
+ExecStartPre=/bin/sh -c "if [ $(md5sum ${DOWNLOAD_LOCATION}/ecs-agent-${ECS_AGENT_VERSION}.tar | cut -d ' ' -f 1) != $(cat ${DOWNLOAD_LOCATION}/ecs-agent-${ECS_AGENT_VERSION}.tar.md5) ]; then exit 1; fi"
 
 # Load an updated ECS Agent downloaded from S3.
-ExecStartPre=/usr/bin/echo "Loading ECS Agent into Docker"
+ExecStartPre=/bin/echo "Loading ECS Agent into Docker"
 ExecStartPre=/bin/sh -c "test -f ${DOWNLOAD_LOCATION}/ecs-agent-${ECS_AGENT_VERSION}.tar && \
     docker load --quiet --input=${DOWNLOAD_LOCATION}/ecs-agent-${ECS_AGENT_VERSION}.tar"
 
 # Add the IPTable rules needed to enable IAM Roles for Tasks.
-ExecStartPre=/usr/bin/echo "Applying IPTables rules"
+ExecStartPre=/bin/echo "Applying IPTables rules"
 ExecStartPre=/sbin/iptables -t nat -A PREROUTING -d 169.254.170.2/32 \
     -p tcp -m tcp --dport 80 -j DNAT --to-destination 127.0.0.1:51679
 ExecStartPre=/sbin/iptables -t nat -A OUTPUT -d 169.254.170.2/32 \
     -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 51679
 
 # Allow the port proxy to route traffic using loopback addresses
-ExecStartPre=/usr/bin/echo "Modifying the attributes of the kernel"
+ExecStartPre=/bin/echo "Modifying the attributes of the kernel"
 ExecStartPre=/sbin/sysctl --quiet --write net.ipv4.conf.all.route_localnet=1
 
 # Remove the container named "ecs-agent"
